k8s-manifests/base/kibana.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  logging
