k8s-manifests/base/catalog-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-depl
  labels:
    app: catalog-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-depl
  template:
    metadata:
      labels:
        app: catalog-depl
    spec:
      containers:
      - name: catalog-depl
        image: ricardoandaluz/catalog:v5
        ports:
        - containerPort: 443
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        volumeMounts:
        - name: audio-storage
          mountPath: /usr/share/nginx/html/audio
      volumes:
      - name: audio-storage
        persistentVolumeClaim:
          claimName: audio-storage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-svc
  labels:
    app: catalog-depl
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: catalog-depl
