k8s-manifests/base/load-balancers.yml
apiVersion: v1
kind: Service
metadata:
  name: actuator-loadbalancer
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: actuator
---
apiVersion: v1
kind: Service
metadata:
  name: controller-frontend-loadbalancer
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5001
  selector:
    app: controller-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-loadbalancer
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: grafana
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-loadbalancer
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 9090
  selector:
    app: prometheus
---
apiVersion: v1
kind: Service
metadata:
  name: fluent-bit-loadbalancer
  namespace: logging
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 2020
  selector:
    app: fluent-bit
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-loadbalancer
  namespace: logging
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5601
  selector:
    app: quickstart
