k8s-manifests/base/upload-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-depl
  labels:
    app: upload-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload-depl
  template:
    metadata:
      labels:
        app: upload-depl
    spec:
      containers:
      - name: upload-depl
        image: ricardoandaluz/upload:v39
        ports:
        - containerPort: 443
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        volumeMounts:
        - name: audio-storage
          mountPath: /usr/share/nginx/html/audio
      volumes:
      - name: audio-storage
        persistentVolumeClaim:
          claimName: audio-storage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: upload-svc
  labels:
    app: upload-depl
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: upload-depl
